--- a/index.html
+++ b/index.html
@@ -1,45 +1,68 @@
-<!doctype html>
-<html lang="en">
-  <head>
+<html lang="en" class="gr__165_227_145_70"><head>
     <meta charset="UTF-8">
     <title>HTML Album Cover</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body data-gr-c-s-loaded="true">
     <div class="wrapper">
       <div id="front" class="album">
         <div id="title-box">
-
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-
-          <!-- Level 2 'HAPPY' Header -->
-
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-
-        </div>
+    <span class="l1">PHARRELL WILLIAMS</span>
+  <span class="l2">HAPPY</span></div>
       </div>
 
       <div id="back" class="album">
 
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+<header>| FROM DESPICABLE ME 2 |</header>
 
-        <!-- Level 1 'HAPPY' Header -->
+<h1>HAPPY</h1>
 
-        <!-- Level 3 'WRITTEN BY...' Header -->
+<header>WRITTEN BY PHARRELL WILLIAMS</header>
 
-        <!-- pararaph text 'PUBLISHED BY...' -->
+<p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.
+</p>
 
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+<span>PHARRELLWILLIAMS.COM</span>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+<img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
 
-        <!-- span text 'COLUMBIARECORDS.COM' -->
+<span>COLUMBIARECORDS.COM</span>
 
         <br>
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+<img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
       </div>
     </div>
-  </body>
-</html>
+  <!-- Code injected by live-server -->
+<script type="text/javascript">
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function() {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					head.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					head.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function(msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			console.log('Live reload enabled.');
+		})();
+	}
+	// ]]>
+</script>
+
+
+</body></html>
