Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,68 +1,53 @@
-<html lang="en" class="gr__165_227_145_70"><head>
+<!doctype html>
+<html lang="en">
+
+  <head>
     <meta charset="UTF-8">
     <title>HTML Album Cover</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body data-gr-c-s-loaded="true">
+
+  <body>
     <div class="wrapper">
       <div id="front" class="album">
         <div id="title-box">
-    <span class="l1">PHARRELL WILLIAMS</span>
-  <span class="l2">HAPPY</span></div>
+
+          <h4>PHARRELL WILLIAMS</h4>
+
+          <h2>HAPPY</h2>
+
+
+          <h4>| FROM DESPICABLE ME 2 |</h4>
+
+        </div>
       </div>
 
       <div id="back" class="album">
 
-<header>| FROM DESPICABLE ME 2 |</header>
+        <h3>| FROM DESPICABLE ME 2 |</h3>
 
-<h1>HAPPY</h1>
+        <h1>HAPPY</h1>
 
-<header>WRITTEN BY PHARRELL WILLIAMS</header>
+        <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
 
-<p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.
-</p>
+        <p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND
+          TERRENCE
+          ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM
+          OTHER
+          ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</p>
 
-<span>PHARRELLWILLIAMS.COM</span>
+        <span>PHARRELLWILLIAMS.COM</span>
 
-<img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Columbia">
 
-<span>COLUMBIARECORDS.COM</span>
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
-<img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
+
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="Sony">
+
       </div>
     </div>
-  <!-- Code injected by live-server -->
-<script type="text/javascript">
-	// <![CDATA[  <-- For SVG support
-	if ('WebSocket' in window) {
-		(function() {
-			function refreshCSS() {
-				var sheets = [].slice.call(document.getElementsByTagName("link"));
-				var head = document.getElementsByTagName("head")[0];
-				for (var i = 0; i < sheets.length; ++i) {
-					var elem = sheets[i];
-					head.removeChild(elem);
-					var rel = elem.rel;
-					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-					}
-					head.appendChild(elem);
-				}
-			}
-			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-			var address = protocol + window.location.host + window.location.pathname + '/ws';
-			var socket = new WebSocket(address);
-			socket.onmessage = function(msg) {
-				if (msg.data == 'reload') window.location.reload();
-				else if (msg.data == 'refreshcss') refreshCSS();
-			};
-			console.log('Live reload enabled.');
-		})();
-	}
-	// ]]>
-</script>
+  </body>
 
-
-</body></html>
+</html>
